--- a/frontend/src/app/components/main/navbar/navbar.component.html
+++ b/frontend/src/app/components/main/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">ENUMS</a>
+    <a class="navbar-brand" href="/">ENUMS</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
