--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+
+html, body {
+    margin: 0;
+    height: 100%;
+    min-height: 100%;
 }
