rewrite header & footer

--- a/frontend/src/app/components/main/footer/footer.component.html
+++ b/frontend/src/app/components/main/footer/footer.component.html
@@ -1,15 +1,10 @@
-<footer class="bg-opacity-75 bg-black text-white p-2">
-    <div class="container">
-        <div class="col-md-12 text-center">
-            <h4 class="p-1 ">Мои соц. сети:</h4>
-            <a href="https://t.me/vvarganovv" target="_blank" class="text-white p-3">
-                <img ngSrc="./assets/image/telegram-svgrepo-com.svg" alt="Телеграм" class="img-fluid social-icon"
-                     height="32" width="32">
-            </a>
-            <a href="https://www.linkedin.com/in/pwsayp/" target="_blank" class="text-white p-3">
-                <img ngSrc="./assets/image/linkedin-svgrepo-com.svg" alt="LinkedIn" class="img-fluid social-icon"
-                     height="32" width="32">
-            </a>
-        </div>
-    </div>
-</footer>
+<div class="Footer">
+
+  <div class="left">
+    <a href="https://www.google.com" class="textButton" target="_blank" rel="noreferrer noopener">
+      <span class="material-icons">GitHub</span>
+    </a>
+    <div class="text">v.0.0.1</div>
+  </div>
+
+</div>
