--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,9 +1,3 @@
-main {
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-    flex: auto;
-}
-
-header, footer {
-    flex: none;
+p {
+  color: #d1d0c5;
 }
