--- a/frontend/src/app/components/main/footer/footer.component.css
+++ b/frontend/src/app/components/main/footer/footer.component.css
@@ -1,9 +1,17 @@
-.social-icons a {
-    margin: 0 10px;
-    text-decoration: none;
+.Footer {
+  background-color: #2c2e31;
+  text-align: center;
+  padding: 20px;
+  width: 100%;
+  color: #646669;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 0.75em;
 }
 
-.social-icons img {
-    width: 30px;
-    height: 30px;
+.textButton {
+  user-select: none;
+  color: #646669;
+  border: none;
+  appearance: none;
 }
