--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,12 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
 body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-}
-
-html, body {
-    margin: 0;
-    height: 100%;
-    min-height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #323437;
+  font-size: 1.25em;
+  gap: 0.5em;
 }
