fix footer, content & header

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,3 +1,22 @@
-p {
+.Content {
+  width: 90vw;
+  margin: 0 auto;
+  padding: 30px 20px;
+  /*min-height: calc(100vh - 79px - 43px);*/
+}
+
+.Content article {
+  background-color: #646669;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+}
+
+.Content p {
+  margin-top: 16px;
   color: #d1d0c5;
+}
+
+.Content h1 {
+  margin: 10px 0 25px 0;
 }
