--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,29 @@
 <app-header></app-header>
-<p>This paragraph was a waste of time and space. If you had not read this and I had not typed this you and I could’ve done something more productive than reading this mindlessly and carelessly as if you did not have anything else to do in life.</p>
+ <div class="Content">
+   <article>
+     <h1>Article</h1>
+     <p>This paragraph was a waste of time and space.</p>
+   </article>
+<!--   <article>-->
+<!--     <h1>Article</h1>-->
+<!--     <p>This paragraph was a waste of time and space.</p>-->
+<!--   </article>-->
+<!--   <article>-->
+<!--     <h1>Article</h1>-->
+<!--     <p>This paragraph was a waste of time and space.</p>-->
+<!--   </article>-->
+<!--   <article>-->
+<!--     <h1>Article</h1>-->
+<!--     <p>This paragraph was a waste of time and space.</p>-->
+<!--   </article>-->
+<!--   <article>-->
+<!--     <h1>Article</h1>-->
+<!--     <p>This paragraph was a waste of time and space.</p>-->
+<!--   </article>-->
+<!--   <article>-->
+<!--     <h1>Article</h1>-->
+<!--     <p>This paragraph was a waste of time and space.</p>-->
+<!--   </article>-->
+
+ </div>
 <app-footer></app-footer>
