--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,8 +1,25 @@
-body {
-  width: 100%;
+/*body {*/
+/*  width: 100%;*/
+/*  margin: 0;*/
+/*  padding: 0;*/
+/*  background-color: #323437;*/
+/*  font-size: 1.25em;*/
+/*  gap: 0.5em;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  min-height: 100vh;*/
+/*}*/
+
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto Mono', monospace;
   background-color: #323437;
-  font-size: 1.25em;
-  gap: 0.5em;
+  position: relative;
+  padding-bottom: 83px;
+  min-height: 100vh;
 }
