--- a/frontend/src/app/components/main/footer/footer.component.html
+++ b/frontend/src/app/components/main/footer/footer.component.html
@@ -1,10 +1,11 @@
 <div class="Footer">
 
-  <div class="left">
-    <a href="https://www.google.com" class="textButton" target="_blank" rel="noreferrer noopener">
-      <span class="material-icons">GitHub</span>
-    </a>
-    <div class="text">v.0.0.1</div>
+  <a href="https://github.com/pwsayp" class="textButton" target="_blank" rel="noreferrer noopener">
+    <img src="assets/image/github.svg" alt="GitHub" width="24" height="24"/>
+  </a>
+  <div class="Version">
+    <img src="assets/image/git-branch.svg" alt="git-branch" width="24" height="24"/>
+    <p>v.0.0.1</p>
   </div>
 
 </div>
