add animation of elements in footer

--- a/frontend/src/app/components/main/footer/footer.component.css
+++ b/frontend/src/app/components/main/footer/footer.component.css
@@ -42,5 +42,10 @@
 }
 
 img {
+  filter: invert(95%) sepia(9%) saturate(196%) hue-rotate(17deg) brightness(86%) contrast(93%);
+  transition: filter 0.1s ease-in-out;
+}
+
+img:hover {
   filter: invert(67%) sepia(57%) saturate(3229%) hue-rotate(15deg) brightness(116%) contrast(84%);
 }
