--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,14 +1,6 @@
-/*body {*/
-/*  width: 100%;*/
-/*  margin: 0;*/
-/*  padding: 0;*/
-/*  background-color: #323437;*/
-/*  font-size: 1.25em;*/
-/*  gap: 0.5em;*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  min-height: 100vh;*/
-/*}*/
+:root {
+  --svg-color: white;
+}
 
 * {
   margin: 0;
