add other social networks to footer

--- a/frontend/src/app/components/main/footer/footer.component.html
+++ b/frontend/src/app/components/main/footer/footer.component.html
@@ -1,8 +1,16 @@
 <div class="Footer">
+  <div class="Contacts">
+    <a href="https://t.me/pwsayp" target="_blank" rel="noreferrer noopener">
+      <img src="assets/image/telegram.svg" alt="Telegram" width="24" height="24"/>
+    </a>
+    <a href="https://www.linkedin.com/in/pwsayp" target="_blank" rel="noreferrer noopener">
+      <img src="assets/image/linkedin.svg" alt="LinkedIn" width="24" height="24"/>
+    </a>
+    <a href="https://github.com/pwsayp" target="_blank" rel="noreferrer noopener">
+      <img src="assets/image/github.svg" alt="GitHub" width="24" height="24"/>
+    </a>
+  </div>
 
-  <a href="https://github.com/pwsayp" class="textButton" target="_blank" rel="noreferrer noopener">
-    <img src="assets/image/github.svg" alt="GitHub" width="24" height="24"/>
-  </a>
   <div class="Version">
     <img src="assets/image/git-branch.svg" alt="git-branch" width="24" height="24"/>
     <p>v.0.0.1</p>
