add mock info for home component

--- a/frontend/src/app/components/content/home/home.component.html
+++ b/frontend/src/app/components/content/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<div class="Content">
+  <article>
+    <h1>Article</h1>
+    <p>This paragraph was a waste of time and space.</p>
+  </article>
+  <article>
+    <h1>Article</h1>
+    <p>This paragraph was a waste of time and space.</p>
+  </article>
+  <article>
+    <h1>Article</h1>
+    <p>This paragraph was a waste of time and space.</p>
+  </article>
+  <article>
+    <h1>Article</h1>
+    <p>This paragraph was a waste of time and space.</p>
+  </article>
+  <article>
+    <h1>Article</h1>
+    <p>This paragraph was a waste of time and space.</p>
+  </article>
+  <article>
+    <h1>Article</h1>
+    <p>This paragraph was a waste of time and space.</p>
+  </article>
+
+</div>
