add article for topic

--- a/frontend/src/app/components/main/header/header.component.html
+++ b/frontend/src/app/components/main/header/header.component.html
@@ -19,7 +19,7 @@
     </a>
   </div>
 
-  <div class="Account" *ngIf="true">
+  <div class="Account" *ngIf="false">
     <a href="/account">
       <button mat-button>
         <img src="assets/image/account.svg" alt="account" width="24" height="24" />
