--- a/frontend/src/app/components/content/theory/theory.component.html
+++ b/frontend/src/app/components/content/theory/theory.component.html
@@ -1,25 +1,22 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h2>AvailableTopics</h2>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let topic of topics">
-                    <td>{{ topic.title }}</td>
-                    <td>
-                        <button type="button" class="btn btn-info m-1" (click)="getTopic(topic.id)">Open</button>
-                        <button type="button" class="btn btn-success m-1" (click)="updateTopic(topic)">Edit</button>
-                        <button type="button" class="btn btn-danger m-1" (click)="deleteTopic(topic.id)">Delete</button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+<div class="Topics" [(ngModel)]="topics">
+  <article *ngFor="let topic of topics">
+    <div class="Topic">
+      <p>{{ topic.title }}</p>
+      <div class="Actions">
+        <a href="/topics/{{ topic.id }}">
+          <button mat-button>
+            <img src="assets/image/in.svg" alt="account" width="20" height="20"/>
+          </button>
+        </a>
+        <a href="/topics/{{ topic.id }}/edit">
+          <button mat-button>
+            <img src="assets/image/edit.svg" alt="account" width="24" height="24"/>
+          </button>
+        </a>
+        <button mat-button (click)="deleteTopic(topic.id)">
+          <img src="assets/image/trash-bin.svg" alt="account" width="24" height="24"/>
+        </button>
+      </div>
     </div>
+  </article>
 </div>
