--- a/frontend/src/app/components/content/home/home.component.css
+++ b/frontend/src/app/components/content/home/home.component.css
@@ -46,27 +46,51 @@
   display: flex;
 }
 
-.Pagination li {
-  margin: 0 5px;
-}
-
-.Pagination a {
-  text-decoration: none;
-  color: #d1d0c5;
-  background-color: #2c2e31;
-  border: 1px solid #d1d0c5;
-  border-radius: 3px;
-  padding: 5px 10px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.Pagination a:hover {
+.Pagination p:hover {
   border: 1px solid #2c2e31;
   background-color: #e2b714;
 }
 
 .Pagination a.active {
+  cursor: pointer;
   background-color: #e2b714;
   color: #fff;
 }
+
+.Pagination button {
+  font-size: 14px;
+  background-color: #2c2e31;
+  border: 1px solid #d1d0c5;
+  border-radius: 3px;
+  color: #d1d0c5;
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.Pagination button:hover {
+  background-color: #e2b714;
+  border: 1px solid #2c2e31;
+  color: #fff;
+}
+
+.Pagination button[disabled] {
+  background-color: #646669;
+  border: 1px solid #646669;
+  cursor: not-allowed;
+  color: #d1d0c5;
+}
+
+.Pagination button:first-child,
+.Pagination button:last-child {
+  margin: 0 0;
+  padding: 5px 10px;
+}
+
+.Pagination button:nth-child(2),
+.Pagination button:nth-last-child(2) {
+  margin: 0 5px;
+  padding: 5px 5px;
+}
+
 
