add tree component

--- a/frontend/src/app/components/main/header/header.component.html
+++ b/frontend/src/app/components/main/header/header.component.html
@@ -3,6 +3,9 @@
     <a href="#">
       <button mat-button>Home</button>
     </a>
+    <a href="/topics">
+      <button mat-button>Topics</button>
+    </a>
     <a href="/theory">
       <button mat-button>Theory</button>
     </a>
