--- a/frontend/src/app/components/content/theory/theory.component.html
+++ b/frontend/src/app/components/content/theory/theory.component.html
@@ -1,7 +1,7 @@
 <div class="Topics">
   <article *ngFor="let topic of topics">
     <div class="Topic">
-      <p>{{ topic.title }}</p>
+<!--      <p>{{ topic.title }}</p>-->
       <div class="Actions">
         <a href="/topics/{{ topic.id }}/learn">
           <button mat-button>
