--- a/frontend/src/app/components/topics/topics.component.html
+++ b/frontend/src/app/components/topics/topics.component.html
@@ -1,15 +1,16 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-    <button mat-icon-button disabled></button>
-    {{node.name}}
-  </mat-tree-node>
+  <!-- ... -->
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-    <button mat-icon-button matTreeNodeToggle
-            [attr.aria-label]="'Toggle ' + node.name">
+    <button mat-icon-button matTreeNodeToggle>
       <mat-icon class="mat-icon-rtl-mirror">
         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
       </mat-icon>
     </button>
     {{node.name}}
+    <ul>
+      <li *ngFor="let value of node.values">
+        {{value.name}}
+      </li>
+    </ul>
   </mat-tree-node>
 </mat-tree>
