intermediate tree result

--- a/frontend/src/app/components/topics/topics.component.html
+++ b/frontend/src/app/components/topics/topics.component.html
@@ -8,6 +8,6 @@
     {{node.name}}
   </mat-tree-node>
   <mat-tree-node *matTreeNodeDef="let leaf" matTreeNodePadding>
-    {{leaf.name}}
+    <li>{{leaf.name}}</li>
   </mat-tree-node>
 </mat-tree>
