--- a/frontend/src/app/components/topics/topics.component.html
+++ b/frontend/src/app/components/topics/topics.component.html
@@ -1,13 +1,18 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-  <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-    <button mat-icon-button matTreeNodeToggle>
-      <mat-icon class="mat-icon-rtl-mirror">
-        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-      </mat-icon>
-    </button>
-    {{node.name}}
-  </mat-tree-node>
-  <mat-tree-node *matTreeNodeDef="let leaf" matTreeNodePadding>
-    <li>{{leaf.name}}</li>
-  </mat-tree-node>
-</mat-tree>
+<div class="tree">
+  <mat-tree class="tree-container" [dataSource]="dataSource" [treeControl]="treeControl">
+    <mat-tree-node class="tree-element" *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
+      <button class="tree-button" mat-icon-button matTreeNodeToggle>
+        <mat-icon class="mat-icon-rtl-mirror">
+          {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+        </mat-icon>
+      </button>
+      <p>{{node.name}}</p>
+    </mat-tree-node>
+    <mat-tree-node class="tree-element" *matTreeNodeDef="let leaf" matTreeNodePadding>
+      <ul>
+        <li class="paragraph"><p>{{leaf.name}}</p></li>
+      </ul>
+    </mat-tree-node>
+  </mat-tree>
+</div>
+
