--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Roboto Mono', monospace;
-  background-color: #323437;
+  background-color: #d1d0c5;
   position: relative;
   padding-bottom: 83px;
   min-height: 100vh;
